force-app/main/default/objects/CoveoV2__DynamicResources__c/CoveoV2__DynamicResources__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DynamicResources</label>
</CustomObject>