force-app/main/default/objects/CoveoV2__DynamicResources__c/fields/CoveoV2__CurrentValue__c.field-meta.xml
<CustomField>
    <fullName>CoveoV2__CurrentValue__c</fullName>
    <description>Current Static Resource selected name</description>
    <label>CurrentValue</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>