force-app/main/default/objects/CoveoV2__DynamicResources__c/fields/CoveoV2__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>CoveoV2__DefaultValue__c</fullName>
    <description>Static Resource default name</description>
    <label>DefaultValue</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>