force-app/main/default/objects/CoveoV2__DynamicResources__c/fields/CoveoV2__Description__c.field-meta.xml
<CustomField>
    <fullName>CoveoV2__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>