force-app/main/default/objects/CoveoV2__DynamicResources__c/fields/CoveoV2__WarningMessage__c.field-meta.xml
<CustomField>
    <fullName>CoveoV2__WarningMessage__c</fullName>
    <description>Warning message to include with that Static Resource</description>
    <label>WarningMessage</label>
    <type>TextArea</type>
</CustomField>